BP-3698-Adjust the default Riverty name for Magento 2 Refactor

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -232,8 +232,8 @@
 "Adjustment Refund","Aanpassingsbetaling"
 "Adjustment Fee","Aanpassingstoeslag"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Er is een fout opgetreden tijdens het verwerken van uw betaling. Probeer het opnieuw. Als deze fout aanhoudt, kies dan een andere betaalmethode."
-"Riverty | Afterpay","Riverty | Afterpay"
-"Enable Riverty | Afterpay","Riverty | Afterpay inschakelen"
+"Riverty","Riverty"
+"Enable Riverty","Riverty inschakelen"
 "Giftcard","Cadeaukaarten"
 "Enable Giftcard","Cadeaukaarten inschakelen"
 "PayPerEmail","PayPerEmail"
@@ -291,7 +291,7 @@
 "Terms and Conditions:","Algemene voorwaarden:"
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct ingevuld zijn voordat u doorgaat."
 "Not Applicable","Niet van toepassing"
-"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty | Afterpay"
+"Yes, I accept the terms and condition for the use of Riverty.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty"
 "Accept terms of use","Accepteer algemene voorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
@@ -634,8 +634,8 @@
 "Unique User-Agent","Unieke User-Agent"
 "The payment method will be shown only when the User-Agent matches this configuration value. The payment method will always be shown when this value is empty.","De betaalmethode wordt alleen getoond wanneer de User-Agent overeenkomt met deze configuratiewaarde. De betaalmethode wordt altijd getoond wanneer deze waarde leeg is."
 "By default in case of active Point of Sale all other payment methods will be explicitly hidden.","Standaard worden bij actieve point of sale alle andere betaalmethoden expliciet verborgen."
-"Riverty | Afterpay payment method","Riverty | Afterpay betaalmethode"
-"Select which paymethod must be used at Riverty | Afterpay.","Selecteer welke betaalmethode moet worden gebruikt bij Riverty | Afterpay."
+"Riverty payment method","Riverty betaalmethode"
+"Select which paymethod must be used at Riverty.","Selecteer welke betaalmethode moet worden gebruikt bij Riverty."
 "High VAT tax classes","Hoog btw-tarief classificaties"
 "Select which tax classes count as 'high' VAT.","Selecteer welke belastingklassen worden beschouwd als 'hoog' BTW-tarief."
 "Middle VAT tax classes","Belastingklassen met een gemiddeld BTW-tarief"
@@ -646,10 +646,10 @@
 "Select which tax classes count as 'zero' VAT.","Selecteer welke belastingklassen worden beschouwd als 'nul' BTW-tarief."
 "No VAT tax classes","Belastingklassen zonder BTW"
 "Select which tax classes count as 'no' VAT.","Selecteer welke belastingklassen worden beschouwd als 'geen' BTW."
-"Enable Riverty | Afterpay 2","Riverty | Afterpay 2 inschakelen"
+"Enable Riverty 2","Riverty 2 inschakelen"
 "Enable Strong Customer Authentication","Strong Customer Authentication	inschakelen"
 "Strong Customer Authentication (also known as SCA) fulfills a set of regulatory requirements, designed to reduce fraud, making online payments more secure while establishing trust with consumers.","Strong Customer Authentication (ook wel bekend als SCA) voldoet aan een reeks wettelijke vereisten die zijn ontworpen om fraude te verminderen, waardoor online betalingen veiliger worden en het vertrouwen van consumenten wordt versterkt."
-"Riverty | Afterpay customer type","Klanttype voor Riverty | Afterpay"
+"Riverty customer type","Klanttype voor Riverty"
 "Min order amount for B2B (in Base Currency)","Minimale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Max order amount for B2B (in Base Currency)","Maximale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Enable iDIN verification","iDIN verificatie inschakelen"
