BP-3684-Add-payment-method-Blik-Magento-2

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -101,6 +101,8 @@
 "Enable Trustly","Trustly inschakelen"
 "Giropay","Giropay"
 "Enable Giropay","Giropay inschakelen"
+"Blik","Blik"
+"Enable Blik","Blik inschakelen"
 "Refunding","Terugbetaling"
 "Enable or disable refunding.","Schakel de creditering/terugstorten in of uit."
 "Set to 'No' refunds must be done manualy in Payment Plaza.","Bij de selectie 'Nee' worden credit memo's in Magento niet aangeboden bij Payment Plaza."
