--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -142,7 +142,7 @@
 "Redirect url after 'Success'","URL de redirection après 'Succès'"
 "Redirect after successful payments.","Rediriger après des paiements réussis."
 "Redirect url after 'Failure'","URL de redirection après 'Échec'"
-"Redirect after failed payments.","Rediriger après des paiements échoués."
+"Redirect after failed payments.<br>Please note that this setting does not apply to all express payment methods, such as iDEAL fast checkout.","Rediriger après des paiements échoués.<br>Veuillez noter que ce paramètre ne s'applique pas à toutes les méthodes de paiement express, telles que le paiement rapide iDEAL."
 "'Canceled' state on failed payment","'Canceled' status bij mislukte betalingen"
 "Orders will stay open after failed payments.","État 'Annulé' en cas d'échec de paiement"
 "Debug email","E-mail de débogage"
