--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -478,3 +478,7 @@
 "Cannot create payment","Zahlung kann nicht erstellt werden"
 "Failed to create quote","Angebotserstellung fehlgeschlagen"
 "Failed to add address to quote","Adresse konnte dem Angebot nicht hinzugefügt werden"
+"Buckaroo Hosted Fields Username:","Buckaroo Hosted Fields Benutzername."
+"Buckaroo Hosted Fields Password:","Buckaroo Hosted Fields Passwort."
+"Enter your Buckaroo Hosted Fields Username, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihren Buckaroo Hosted Fields Benutzernamen ein, den Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
+"Enter your Buckaroo Hosted Fields Password, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihr Buckaroo Hosted Fields Passwort ein, das Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
