adding blik as a payment method 1/2

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -90,6 +90,8 @@
 "Enable SOFORT","SOFORT inschakelen"
 "Belfius","Belfius"
 "Enable Belfius","Belfius inschakelen"
+"Blik","Blik"
+"Enable Blik","Blik inschakelen"
 "Alipay","Alipay"
 "Enable Alipay","Alipay inschakelen"
 "WeChatPay","WeChatPay"
