BP-3792 Translations for Date of Birth picker

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -478,3 +478,13 @@
 "Cannot create payment","Zahlung kann nicht erstellt werden"
 "Failed to create quote","Angebotserstellung fehlgeschlagen"
 "Failed to add address to quote","Adresse konnte dem Angebot nicht hinzugefügt werden"
+"Mar","Mär"
+"May","Mai"
+"Oct","Okt"
+"Mo","Mo"
+"Tu","Di"
+"We","Mi"
+"Th","Do"
+"Fr","Fr"
+"Sa","Sa"
+"Su","So"
