--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -479,3 +479,17 @@
 "Cannot create payment","Impossible de créer le paiement"
 "Failed to create quote","Échec de la création du devis"
 "Failed to add address to quote","Échec de l'ajout de l'adresse au devis"
+"Feb","Fév"
+"Mar","Mar"
+"Apr","Avr"
+"May","Mai"
+"Aug","Aoû"
+"Oct","Oct"
+"Dec","Déc"
+"Mo","Lu"
+"Tu","Ma"
+"We","Me"
+"Th","Je"
+"Fr","Ve"
+"Sa","Sa"
+"Su","Di"
