--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -478,3 +478,13 @@
 "Cannot create payment","Betaling kan niet worden aangemaakt"
 "Failed to create quote","Offerte aanmaken mislukt"
 "Failed to add address to quote","Adres kan niet aan offerte worden toegevoegd"
+"Mar","Mrt"
+"May","Mei"
+"Oct","Okt"
+"Mo","Ma"
+"Tu","Di"
+"We","Wo"
+"Th","Do"
+"Fr","Vr"
+"Sa","Za"
+"Su","Zo"
