--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -99,6 +99,8 @@
 "Enable Przelewy24","Przelewy24 inschakelen"
 "Trustly","Trustly"
 "Enable Trustly","Trustly inschakelen"
+"Giropay","Giropay"
+"Enable Giropay","Giropay inschakelen"
 "Blik","Blik"
 "Enable Blik","Blik inschakelen"
 "Refunding","Terugbetaling"
