update Buckaroo Hosted Fields

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -488,10 +488,10 @@
 "Cannot create payment","Betaling kan niet worden aangemaakt"
 "Failed to create quote","Offerte aanmaken mislukt"
 "Failed to add address to quote","Adres kan niet aan offerte worden toegevoegd"
-"Buckaroo Hosted Fields Username:","Buckaroo Hosted Fields Gebruikersnaam."
-"Buckaroo Hosted Fields Password:","Buckaroo Hosted Fields Wachtwoord."
-"Enter your Buckaroo Hosted Fields Username, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier uw Buckaroo Hosted Fields Gebruikersnaam in, die u kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
-"Enter your Buckaroo Hosted Fields Password, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier uw Buckaroo Hosted Fields wachtwoord in, die u kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client-ID."
+"Buckaroo Hosted Fields Client Secret:","BBuckaroo Hosted Fields Clientgeheim."
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier uw Buckaroo Hosted Fields Client-ID in, die u kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier uw Buckaroo Hosted Fields Clientgeheim in, die u kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
 "Mar","Mrt"
 "May","Mei"
 "Oct","Okt"
