--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -11,7 +11,7 @@
 "Send order confirmation email","Envoyer un e-mail de confirmation de commande"
 "Enable to send an order confirmation email to the customer when the creating of the order is successful. Specific for this payment method.","Activer pour envoyer un e-mail de confirmation de commande au client lorsque la création de la commande est réussie. Spécifique pour ce mode de paiement."
 "Payment fee","Frais de paiement"
-"The above amount is calculated based on de Tax settings in Stores > Configuration > Sales > Tax.","Le montant ci-dessus est calculé en fonction des paramètres de taxe dans Boutiques > Configuration > Ventes > Taxe."
+"The above amount is calculated based on de Tax settings in Buckaroo > General configuration and account information > Buckaroo Payment Fee Tax Class.","Le montant ci-dessus est calculé en fonction des paramètres de taxe dans Boutiques > Configuration > Ventes > Taxe."
 "Payment fee frontend label","Étiquette frontale des frais de paiement"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Cette étiquette sera affichée à côté des frais sur les pages de paiement, de commande, de facture et de note de crédit et sur les fichiers .PDF."
 "Max order amount (in Base Currency)","Montant maximum de la commande (en devise de base)"
