--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -13,7 +13,7 @@
 "Send order confirmation email","Verstuur order bevestigingsmail"
 "Enable to send an order confirmation email to the customer when the creating of the order is successful. Specific for this payment method.","Activeer om een order bevestigings email te versturen wanneer de order is aangemaakt. Specifiek voor deze betaalmethode."
 "Payment fee","Betaaltoeslag"
-"The above amount is calculated based on de Tax settings in Stores > Configuration > Sales > Tax.","Dit bedrag wordt berekend op basis van de BTW instellingen in: Stores > Configuration > Verkoop > Belasting"
+"The above amount is calculated based on de Tax settings in Buckaroo > General configuration and account information > Buckaroo Payment Fee Tax Class.","Dit bedrag wordt berekend op basis van de BTW instellingen in: Stores > Configuration > Verkoop > Belasting"
 "Payment fee frontend label","Betaaltoeslag label aan de voorkant"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Het label wordt getoond naast de betaaltoeslag tijdens de checkout en op de order, invoice, creditmemo pagina's en PDF."
 "Max order amount (in Base Currency)","Max. order bedrag (in basis munteenheid)"
