--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -294,6 +294,7 @@
 "Please make sure all fields are filled in correctly before proceeding.","Bitte stellen Sie sicher, dass alle Felder korrekt ausgefüllt sind, bevor Sie fortfahren."
 "Not Applicable","Unzutreffend"
 "Yes, I accept the terms and condition for the use of Riverty.","Ja, ich akzeptiere die Nutzungsbedingungen für Riverty."
+"The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.","Es gelten die allgemeinen Geschäftsbedingungen für die Zahlungsmethode Riverty. Die Datenschutzbestimmungen von Riverty findest Du hier."
 "Accept terms of use","Akzeptieren Sie die Allgemeinen Geschäftsbedingungen"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Irgendwelche Kommentare zu dieser Beta-Version? <a target=\"_blank\" href=\"%s\"> Lass uns wissen! </a>"
