--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -302,6 +302,7 @@
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct ingevuld zijn voordat u doorgaat."
 "Not Applicable","Niet van toepassing"
 "Yes, I accept the terms and condition for the use of Riverty.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty."
+"The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.","De Algemene Voorwaarden voor de betaalmethode Riverty zijn van toepassing. Het privacybeleid van Riverty vind je hier."
 "Accept terms of use","Accepteer algemene voorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
