added support for german (Austria, Luxembourg and Switzerland), fixed b2b terms and conditions link

--- a/i18n/fr_BE.csv
+++ b/i18n/fr_BE.csv
@@ -2,6 +2,7 @@
 "Create Invoice on Payment","Créer une facture lors du paiement"
 "Create Invoice on Shipment","Créer une facture lors de l'expédition"
 "Select the moment when the invoice should be created.","Sélectionnez le moment où la facture devrait être créée."
+"The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.","De Algemene Voorwaarden voor de betaalmethode Riverty zijn van toepassing. Het privacybeleid van Riverty vind je hier."
 "Delivery costs","Coûts de livraison"
 "Discount","Réduction"
 "Discount on","Réduction sur"
