--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -82,8 +82,8 @@
 "Select the maximum reminder level buckaroo will use.","Selecteer het maximale niveau van herinnering die Buckaroo toepast."
 "SEPA direct debit","SEPA machtiging"
 "Enable SEPA direct debit","SEPA machtiging inschakelen"
-"Bancontact / Mister Cash","Bancontact / Mister Cash"
-"Enable Bancontact / Mister Cash","Bancontact / Mister Cash inschakelen"
+"Bancontact","Bancontact"
+"Enable Bancontact","Bancontact inschakelen"
 "Please enter a valid BIC number","Voer een geldig BIC nummer in"
 "Please select a issuer from the list","Selecteer een bank uit de lijst"
 "Belfius","Belfius"
