BP-3793-Translations-for-Date-of-Birth-picker

--- a/i18n/be_FR.csv
+++ b/i18n/be_FR.csv
@@ -7,3 +7,15 @@
 "Shipping fee","Les frais d'expédition"
 "Service costs","Frais de service"
 "Discount on","Réduction sur"
+"Feb","Fév"
+"Apr","Avr"
+"May","Mai"
+"Aug","Aoû"
+"Dec","Déc"
+"Mo","Lu"
+"Tu","Ma"
+"We","Me"
+"Th","Je"
+"Fr","Ve"
+"Sa","Sa"
+"Su","Di"
