--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -651,3 +651,13 @@
 "Min order amount for B2B (in Base Currency)","Minimale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Max order amount for B2B (in Base Currency)","Maximale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Enable iDIN verification","iDIN verificatie inschakelen"
+"Mar","Mrt"
+"May","Mei"
+"Oct","Okt"
+"Mo","Ma"
+"Tu","Di"
+"We","Wo"
+"Th","Do"
+"Fr","Vr"
+"Sa","Za"
+"Su","Zo"
