--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -475,3 +475,15 @@
 "Select your giftcard supplier","Sélectionnez votre fournisseur de cartes cadeaux"
 "iDIN can be used in different modes, based on when you want iDIN to be required as an additional verification.<br/><strong>Global Mode:</strong> Requires iDIN verification for all products.<br/><strong>Specific Products Mode:</strong> Enables iDIN for selected products via the Magento 2 catalog settings.<br/><strong>Product Categories Mode:</strong> Configures iDIN for specific product categories.","iDIN peut être utilisé dans différents modes, en fonction de quand vous souhaitez que iDIN soit requis comme vérification supplémentaire.<br/><strong>Mode global:</strong> Exige la vérification iDIN pour tous les produits.<br/><strong>Mode Produits spécifiques:</strong> Active iDIN pour les produits sélectionnés via les paramètres du catalogue Magento 2.<br/><strong>Mode Catégories de produits:</strong> Configure iDIN pour des catégories de produits spécifiques."
 "You have canceled the payment request.","Vous avez annulé la demande de paiement"
+"Feb","Fév"
+"Apr","Avr"
+"May","Mai"
+"Aug","Aoû"
+"Dec","Déc"
+"Mo","Lu"
+"Tu","Ma"
+"We","Me"
+"Th","Je"
+"Fr","Ve"
+"Sa","Sa"
+"Su","Di"
