--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -475,3 +475,13 @@
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
 "iDIN can be used in different modes, based on when you want iDIN to be required as an additional verification.<br/><strong>Global Mode:</strong> Requires iDIN verification for all products.<br/><strong>Specific Products Mode:</strong> Enables iDIN for selected products via the Magento 2 catalog settings.<br/><strong>Product Categories Mode:</strong> Configures iDIN for specific product categories.","iDIN kan in verschillende modi worden gebruikt, afhankelijk van wanneer je iDIN als extra verificatie wilt vereisen.<br/><strong>Globale modus:</strong> Vereist iDIN-verificatie voor alle producten.<br/><strong>Specifieke productmodus:</strong> Activeert iDIN voor geselecteerde producten via de Magento 2-catalogusinstellingen.<br/><strong>Productcategorieën modus:</strong> Configureert iDIN voor specifieke productcategorieën."
 "You have canceled the payment request.","Vous avez annulé la demande de paiement"
+"Mar","Mrt"
+"May","Mei"
+"Oct","Okt"
+"Mo","Ma"
+"Tu","Di"
+"We","Wo"
+"Th","Do"
+"Fr","Vr"
+"Sa","Za"
+"Su","Zo"
