reimplement hosted fields

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -475,9 +475,17 @@
 "Cannot create payment","Zahlung kann nicht erstellt werden"
 "Failed to create quote","Angebotserstellung fehlgeschlagen"
 "Failed to add address to quote","Adresse konnte dem Angebot nicht hinzugefügt werden"
+"Jan","Jan"
+"Feb","Feb"
 "Mar","Mär"
+"Apr","Apr"
 "May","Mai"
+"Jun","Jun"
+"Jul","Jul"
+"Aug","Aug"
+"Sep","Sep"
 "Oct","Okt"
+"Nov","Nov"
 "Dec","Dez"
 "Mo","Mo"
 "Tu","Di"
@@ -486,3 +494,12 @@
 "Fr","Fr"
 "Sa","Sa"
 "Su","So"
+
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
+"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihren Buckaroo Hosted Fields Client ID ein, den Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihr Buckaroo Hosted Fields Client Secret ein, das Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
+"Cardholder Name:","Name des Karteninhabers:"
+"Card Number:","Kartennummer:"
+"Expiry Date:","Ablaufdatum:"
+"CVC:","CVC:"
