--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -473,3 +473,30 @@
 "Cannot create payment","No se puede crear el pago"
 "Failed to create quote","No se pudo crear la cotización"
 "Failed to add address to quote","No se pudo añadir la dirección a la cotización"
+"Jan","Ene"
+"Feb","Feb"
+"Mar","Mar"
+"Apr","Abr"
+"May","May"
+"Jun","Jun"
+"Jul","Jul"
+"Aug","Ago"
+"Sep","Sep"
+"Oct","Oct"
+"Nov","Nov"
+"Dec","Dic"
+"Mo","Lu"
+"Tu","Ma"
+"We","Mi"
+"Th","Ju"
+"Fr","Vi"
+"Sa","Sa"
+"Su","Do"
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
+"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Ingrese su Buckaroo Hosted Fields Client ID, disponible en Buckaroo Plaza en → Configuración → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Registro de token</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Ingrese su Buckaroo Hosted Fields Client Secret, disponible en Buckaroo Plaza en → Configuración → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Registro de token</a>."
+"Cardholder Name:","Nombre del titular de la tarjeta:"
+"Card Number:","Número de tarjeta:"
+"Expiry Date:","Fecha de vencimiento:"
+"CVC:","CVC:"
