--- a/i18n/fr_BE.csv
+++ b/i18n/fr_BE.csv
@@ -24,12 +24,17 @@
 "Cannot create payment","Impossible de créer le paiement"
 "Failed to create quote","Échec de la création du devis"
 "Failed to add address to quote","Échec de l'ajout de l'adresse au devis"
+"Jan","Jan"
 "Feb","Fév"
 "Mar","Mar"
 "Apr","Avr"
 "May","Mai"
+"Jun","Juin"
+"Jul","Juil"
 "Aug","Aoû"
+"Sep","Sep"
 "Oct","Oct"
+"Nov","Nov"
 "Dec","Déc"
 "Mo","Lu"
 "Tu","Ma"
@@ -38,3 +43,11 @@
 "Fr","Ve"
 "Sa","Sa"
 "Su","Di"
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
+"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client ID, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client Secret, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
+"Cardholder Name:","Nom du titulaire de la carte:"
+"Card Number:","Numéro de carte:"
+"Expiry Date:","Date d'expiration:"
+"CVC:","CVC:"
