--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -494,7 +494,6 @@
 "Fr","Fr"
 "Sa","Sa"
 "Su","So"
-
 "Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
 "Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
 "Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihren Buckaroo Hosted Fields Client ID ein, den Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
@@ -503,3 +502,6 @@
 "Card Number:","Kartennummer:"
 "Expiry Date:","Ablaufdatum:"
 "CVC:","CVC:"
+"An error occurred, please try another payment method or try again later."."Ein Fehler ist aufgetreten. Bitte versuchen Sie eine andere Zahlungsmethode oder versuchen Sie es später erneut."
+"Payment processing failed. Please try again.","Zahlungsverarbeitung fehlgeschlagen. Bitte versuchen Sie es erneut."
+"Payment token is missing. Please try again.","Zahlungstoken fehlt. Bitte versuchen Sie es erneut."
