BP-4229-Update "Website Key" to "Store Key"

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -108,9 +108,9 @@
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Fügen Sie Ihren Buckaroo 'Secret key' hinzu."
 "The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","Der 'Secret Key' wird im Buckaroo Plaza angezeigt unter 'Configuration > Security > Secret Key. Wenden Sie sich für Support an Buckaroo."
-"(Website) key","(Website) key"
-"Enter your Buckaroo merchant/website key.","Fügen Sie Ihren Buckaroo merchant/website key hinzu."
-"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der '(Merchant)Key' wird angezeigt in the Buckaroo Plaza unter My Buckaroo > Websites."
+"Store key","Store key"
+"Enter your Buckaroo store key.","Fügen Sie Ihren Buckaroo store key hinzu."
+"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der 'Store Key' wird angezeigt in the Buckaroo Plaza unter My Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Fügen Sie Ihren Buckaroo-Guid code hinzu."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""Die Händler-Guid wird im Buckaroo Plaza angezeigt unter > My Buckaroo > Details > Guid."
@@ -178,7 +178,7 @@
 "Buckaroo","Buckaroo"
 "Version &amp; Support","Ausführung &amp; untersteuern"
 "General configuration and account information","Allgemeine Konfigurations- und Kontoinformationen"
-"(Website) key","(Website) key"
+"Store key","Store key"
 "Debug information will be sent to these comma-separated email addresses","Debug-Informationen werden an diese durch Kommas getrennten E-Mail-Adressen gesendet"
 "Debugging","Debuggen"
 "Decide what to debug. Log files will be created within the var/log/Buckaroo/ directory.","Bestimmen Sie, was protokolliert wird. Protokolldateien werden im Ordner var/log/Buckaroo/ erstellt."
