--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -111,9 +111,9 @@
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Voeg uw Buckaroo 'Secret Key' toe."
 "The Secret Key can be retrieved in the Buckaroo Plaza under Settings > Secret Key. For support contact Buckaroo.","De Secret Key staat weergegeven in de Buckaroo Plaza onder Instellingen > Secret Key. Voor ondersteuning neem contact op met Buckaroo."
-"(Website) key","(Website) key"
-"Enter your Buckaroo merchant/website key.","Voeg uw Buckaroo merchant/website key toe."
-"The (Website) key can be retrieved in the Buckaroo Plaza under Settings > Websites. For support contact Buckaroo.","De (Website) key staat weergeven in de Buckaroo Plaza onder Instellingen > Websites. Voor ondersteuning neem contact op met Buckaroo."
+"Store key","Store key"
+"Enter your Buckaroo store key.","Voeg uw Buckaroo store key toe."
+"The Store key can be retrieved in the Buckaroo Plaza under Settings > Websites. For support contact Buckaroo.","De Store key staat weergeven in de Buckaroo Plaza onder Instellingen > Websites. Voor ondersteuning neem contact op met Buckaroo."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Buckaroo Plaza onder Mijn Buckaroo > Details > Guid."
@@ -180,7 +180,7 @@
 "Buckaroo","Buckaroo"
 "Version &amp; Support","Versie &amp; Ondersteuning"
 "General configuration and account information","Algemene configuratie en accountinformatie"
-"(Website) key","(Website) key"
+"Store key","Store key"
 "Debug information will be sent to these comma-separated email addresses","Debug-informatie zal verzonden worden naar deze, door een komma gescheiden, e-mailadressen"
 "Debugging","Debuggen"
 "Decide what to debug. Log files will be created within the var/log/Buckaroo/ directory.","Bepaal wat er gelogd wordt. Log bestanden worden aangemaakt in de var/log/Buckaroo/ folder."
