--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -110,9 +110,9 @@
 "Secret key","Clave secreta"
 "Enter your Buckaroo Secret Key.","Introduzca su clave secreta de Buckaroo."
 "The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clave secreta se encuentra en Buckaroo Plaza, en Configuración > Seguridad > Clave secreta. Si necesita ayuda, póngase en contacto con Buckaroo."
-"(Website) key","Clave (vendedor)"
-"Enter your Buckaroo merchant/website key.","Introduzca su clave de vendedor/sitio web de Buckaroo."
-"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clave (vendedor) se encuentra en Buckaroo Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
+"Store key","Clave de la tienda"
+"Enter your Buckaroo store key.","Introduzca su Clave de la tienda de Buckaroo."
+"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clave de la tienda se encuentra en Buckaroo Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
 "(Merchant) guid","GUID (vendedor)"
 "Enter your Buckaroo merchant guid.","Introduzca su GUID de vendedor de Buckaroo."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","El GUID (vendedor) se encuentra en Buckaroo Plaza, en Mi Buckaroo > Detalles > GUID. Si necesita ayuda, póngase en contacto con Buckaroo."
@@ -180,7 +180,7 @@
 "Buckaroo","Buckaroo"
 "Version &amp; Support","Versión y asistencia"
 "General configuration and account information","Configuración general e información de la cuenta"
-"(Website) key","Clave (vendedor)"
+"Store key","Clave de la tienda"
 "Debug information will be sent to these comma-separated email addresses","La información de corrección de errores se enviará a estas direcciones de correo electrónico separadas por comas"
 "Debugging","Corrección de errores"
 "Decide what to debug. Log files will be created within the var/log/Buckaroo/ directory.","Elija dónde realizar la corrección de errores. Los archivos de registro se crearán en el directorio var/log/Buckaroo/."
