BP-4229-Update "Website Key" to "Store Key"

--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -110,9 +110,9 @@
 "Secret key","Clave secreta"
 "Enter your Buckaroo Secret Key.","Introduzca su clave secreta de Buckaroo."
 "The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clave secreta se encuentra en Buckaroo Plaza, en Configuración > Seguridad > Clave secreta. Si necesita ayuda, póngase en contacto con Buckaroo."
-"Store key","Clave de la tienda"
-"Enter your Buckaroo store key.","Introduzca su Clave de la tienda de Buckaroo."
-"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clave de la tienda se encuentra en Buckaroo Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
+"Store key","Store key"
+"Enter your Buckaroo store key.","Introduzca su store key de Buckaroo."
+"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La Store key se encuentra en Buckaroo Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
 "(Merchant) guid","GUID (vendedor)"
 "Enter your Buckaroo merchant guid.","Introduzca su GUID de vendedor de Buckaroo."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","El GUID (vendedor) se encuentra en Buckaroo Plaza, en Mi Buckaroo > Detalles > GUID. Si necesita ayuda, póngase en contacto con Buckaroo."
