--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -108,9 +108,9 @@
 "Secret key","Clé secrète"
 "Enter your Buckaroo Secret Key.","Entrez votre clé secrète Buckaroo"
 "The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clé secrète peut être récupérée dans Buckaroo Plaza sous Configuration > Sécurité > Clé secrète. Pour obtenir de l'aide, contactez Buckaroo."
-"Store key","Clé du magasin"
-"Enter your Buckaroo store key.","Entrez votre clé du magasin Buckaroo."
-"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clé du magasin peut être récupérée dans Buckaroo Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
+"Store key","Store key"
+"Enter your Buckaroo store key.","Entrez votre Buckaroo store key."
+"The Store key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La Store key peut être récupérée dans Buckaroo Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
 "(Merchant) guid","(Merchand) guid"
 "Enter your Buckaroo merchant guid.","Entrez votre 'guid' marchand Buckaroo."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","Le Guid (marchand) peut être récupéré dans Buckaroo Plaza sous Mon Buckaroo > Détails > Guid. Pour obtenir de l'aide, contactez Buckaroo."
