refactor: Rename Knaken payment method to goSettle in config and translation files

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -602,7 +602,7 @@
 "Select sort order PayByBank Issuers.","Selecteer de sorteervolgorde voor de PayByBank banken"
 "Enable KBC","KBC inschakelen"
 "Enable Klarna","Klarna inschakelen"
-"Enable Knaken Settle","Knaken Settle inschakelen"
+"Enable goSettle","goSettle inschakelen"
 "Enable MBWay","MBWay inschakelen"
 "Enable Multibanco","Multibanco inshakelen"
 "Enable PayByBank","PayByBank inschakelen"
