--- a/i18n/de_CH.csv
+++ b/i18n/de_CH.csv
@@ -407,6 +407,9 @@
 "Select a month","Wähle einen Monat"
 "Select a year","Wählen Sie ein Jahr aus"
 "Enable Apple Pay","Apple Pay aktivieren"
+"Apple Pay checkout type","Apple Pay Checkout-Typ"
+"Inline (Integrated in checkout)", "Inline (In den Checkout integriert)"
+"Redirect (Buckaroo Hosted Payment Page)", "Redirect (Buckaroo Hosted Payment Page)"
 "Your payment could not be processed","Ihre Zahlung konnte nicht verarbeitet werden"
 "Capayable Postpay","Capayable Nachzahlung"
 "Enable In3","In3 aktivieren"
