--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -413,6 +413,9 @@
 "Select a month","Seleccione un mes"
 "Select a year","Seleccione un año"
 "Enable Apple Pay","Activar Apple Pay"
+"Apple Pay checkout type","Tipo de pago con Apple Pay en el checkout"
+"Inline (Integrated in checkout)", "Integrado (Integrado en el checkout)"
+"Redirect (Buckaroo Hosted Payment Page)", "Redirección (Página de pago alojada por Buckaroo)"
 "Your payment could not be processed","No se ha podido procesar el pago"
 "Capayable Postpay","Capayable Postpay"
 "Enable In3","Activar In3"
