--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -417,6 +417,9 @@
 "Select a month","Kies een maand"
 "Select a year","Kies een jaar"
 "Enable Apple Pay","Apple Pay inschakelen"
+"Apple Pay checkout type","Apple Pay afrekenmodus"
+"Inline (Integrated in checkout)", "Inline (Geïntegreerd in de checkout)"
+"Redirect (Buckaroo Hosted Payment Page)", "Redirect (Buckaroo betaalpagina)"
 "Your payment could not be processed","Uw betaling kon niet verwerkt worden"
 "Capayable Postpay","Capayable Achteraf Betalen"
 "Enable In3","In3 inschakelen"
