update: enhance Apple Pay checkout type descriptions for clarity

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -407,8 +407,7 @@
 "Select a year","Sélectionnez une année"
 "Enable Apple Pay","Activer Apple Pay"
 "Apple Pay checkout type","Type de passage en caisse Apple Pay"
-"Inline (Integrated in checkout)", "Intégré (Intégré au passage en caisse)"
-"Redirect (Buckaroo Hosted Payment Page)", "Redirection (Page de paiement hébergée par Buckaroo)"
+"Yes = Inline (Integrated in checkout), No = Redirect (Buckaroo Hosted Payment Page)", "Yes = Intégré (Intégré au passage en caisse), No = Redirection (Page de paiement hébergée par Buckaroo)"
 "Your payment could not be processed","Votre paiement n'a pas pu être traité"
 "Capayable Postpay","Capayable Post-paiement"
 "Enable In3","Activer In3"
