--- a/i18n/de_LU.csv
+++ b/i18n/de_LU.csv
@@ -408,8 +408,7 @@
 "Select a year","Wählen Sie ein Jahr aus"
 "Enable Apple Pay","Apple Pay aktivieren"
 "Apple Pay checkout type","Apple Pay Checkout-Typ"
-"Inline (Integrated in checkout)", "Inline (In den Checkout integriert)"
-"Redirect (Buckaroo Hosted Payment Page)", "Redirect (Buckaroo Hosted Payment Page)"
+"Yes = Inline (Integrated in checkout), No = Redirect (Buckaroo Hosted Payment Page)", "Yes = Inline (In den Checkout integriert), No = Redirect (Buckaroo Hosted Payment Page)"
 "Your payment could not be processed","Ihre Zahlung konnte nicht verarbeitet werden"
 "Capayable Postpay","Capayable Nachzahlung"
 "Enable In3","In3 aktivieren"
