--- a/i18n/fr_BE.csv
+++ b/i18n/fr_BE.csv
@@ -56,5 +56,4 @@
 "Payment token is missing. Please try again.","Le jeton de paiement est manquant. Veuillez réessayer."
 "Enable Apple Pay","Activer Apple Pay"
 "Apple Pay checkout type","Type de passage en caisse Apple Pay"
-"Inline (Integrated in checkout)", "Intégré (Intégré au passage en caisse)"
-"Redirect (Buckaroo Hosted Payment Page)", "Redirection (Page de paiement hébergée par Buckaroo)"
+"Yes = Inline (Integrated in checkout), No = Redirect (Buckaroo Hosted Payment Page)", "Yes = Intégré (Intégré au passage en caisse), No = Redirection (Page de paiement hébergée par Buckaroo)"
