--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -412,8 +412,7 @@
 "Select a year","Kies een jaar"
 "Enable Apple Pay","Apple Pay inschakelen"
 "Apple Pay checkout type","Apple Pay afrekenmodus"
-"Inline (Integrated in checkout)", "Inline (Geïntegreerd in de checkout)"
-"Redirect (Buckaroo Hosted Payment Page)", "Redirect (Buckaroo betaalpagina)"
+"Yes = Inline (Integrated in checkout), No = Redirect (Buckaroo Hosted Payment Page)", "Yes = Inline (Geïntegreerd in de checkout), No = Redirect (Buckaroo betaalpagina)"
 "Your payment could not be processed","Uw betaling kon niet verwerkt worden"
 "Capayable Postpay","Capayable Achteraf Betalen"
 "Enable In3","In3 inschakelen"
