--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -485,3 +485,7 @@
 "Fr","Vr"
 "Sa","Za"
 "Su","Zo"
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
+"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client ID in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client Secret in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
