--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -479,6 +479,7 @@
 "Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
 "Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihren Buckaroo Hosted Fields Client ID ein, den Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
 "Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Geben Sie hier Ihr Buckaroo Hosted Fields Client Secret ein, das Sie von der Buckaroo Plaza unter → Einstellungen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistrierung</a>."
+"Mar","Mär"
 "May","Mai"
 "Oct","Okt"
 "Dec","Dez"
