update: add option for Apple Pay integration mode to support redirect and inline checkout

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -490,3 +490,6 @@
 "Fr","Fr"
 "Sa","Sa"
 "Su","So"
+"Apple Pay checkout type","Apple Pay Checkout-Typ"
+"Inline (Integrated in checkout)","Inline (In den Checkout integriert)"
+"Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo Hosted Payment Page)"
