--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -493,3 +493,4 @@
 "Apple Pay checkout type","Apple Pay Checkout-Typ"
 "Inline (Integrated in checkout)","Inline (In den Checkout integriert)"
 "Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo Hosted Payment Page)"
+"Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page).","Wählen Sie Inline, um Apple Pay direkt im Magento-Checkout einzubetten. Wählen Sie Redirect, um Kunden zur sicheren Hosted Payment Page von Buckaroo weiterzuleiten. Hinweis: Bei Verwendung der Redirect-Option kann Apple Pay nur im regulären Checkout angeboten werden (nicht z. B. im Mini-Warenkorb oder auf der Produktseite)."
