--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -36,3 +36,4 @@
 "Apple Pay checkout type","Apple Pay checkout type"
 "Inline (Integrated in checkout)","Inline (Integrated in checkout)"
 "Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo Hosted Payment Page)"
+"Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page).","Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page)."
